--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,4 @@ jobs:
         server: files.000webhost.com
         username: projetnfa021
         password: JeJbSwyxH!!$X^4B#qBF
-        server-dir : ./public_html
+        server-dir : ./public_html/
